<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Toolbar with Riwayat Button -->
<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            android:background="?attr/colorPrimary"-->
<!--            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/aplikasi_saya"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="18sp"-->
<!--                android:layout_gravity="center_vertical" />-->

<!--            <Button-->
<!--                android:id="@+id/btnRiwayat"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/riwayat"-->
<!--                android:layout_gravity="end"-->
<!--                android:background="@null"-->
<!--                android:textColor="@android:color/white" />-->
<!--        </androidx.appcompat.widget.Toolbar>-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->


    <!-- Content Layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRiwayat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riwayat"
                android:layout_gravity="end"
                android:background="@null"
                android:textColor="@android:color/white" />

            <!-- Dropdown for CC Kendaraan -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_kendaraan"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <Spinner
                android:id="@+id/spinnerCcKendaraan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/spinner_background" />

            <!-- Dropdown for Bahan Bakar -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bahan_bakar"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <Spinner
                android:id="@+id/spinnerBahanBakar"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background" />

            <!-- Latitude -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/editTextLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_latitude"
                android:inputType="numberDecimal" />

            <!-- Longitude -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/editTextLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_longitude"
                android:inputType="numberDecimal" />

            <!-- Kecepatan Rata-rata -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kecepatan_rata_rata"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/inputKecepatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_kecepatan"
                android:inputType="numberDecimal" />

            <!-- Jarak Tempuh -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jarak_tempuh"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/inputJarak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_jarak_tempuh"
                android:inputType="numberDecimal" />

            <!-- Emisi -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emisi"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/inputEmisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_emisi"
                android:inputType="numberDecimal" />


            <TextView
                android:id="@+id/x_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X: 0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/y_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Y: 0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/z_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Z: 0"
                android:textSize="18sp" />

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start"
                    android:layout_marginEnd="8dp" />

                <Button
                    android:id="@+id/btnStop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stop"
                    android:layout_marginEnd="8dp" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
